--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div><img src="/Imágenes/noel-logo-black-and-white.png" alt="logo-noel"></div>
+        <div><img src="Imagenes/noel-logo-black-and-white.png" alt="ERROR"></div>
         <h1>Back Up <span>Data Studio</span></h1>
         <p>Propósito: Garantizar el respaldo de información de los diferentes reportes del SIG en tiempo real, para evitar duplicidad y pérdida de la información. 
         </p>
